--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html lang="">
-  <head>
+<html>
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
@@ -17,11 +16,9 @@
     <meta name="apple-mobile-web-app-title" content="">
 
     <link rel="stylesheet" href="/css/styles.css">
-
-  </head>
-  <body>
-
+</head>
+<body>
     <div id="container"></div>
     <script src="/js/app.js"></script>
-  </body>
+</body>
 </html>
